update withdraw [list bank adapter] + file addition

--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -185,291 +185,14 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <!-- letakan fragment disini-->
-            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <!--OTAK ATIK -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/daftarbank"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="9dp"
-                app:cardCornerRadius="6dp">
+                android:layout_height="wrap_content"/>
+            <!--=============-->
 
-                <FrameLayout
-                    android:layout_width="4dp"
-                    android:layout_height="match_parent"
-                    android:background="#005EFF" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#BFE4F0FF"
-
-                    android:orientation="vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/drystick_bold"
-                                android:text="BCA"
-                                android:textColor="#505050"
-                                android:textSize="17sp" />
-
-                            <ImageView
-                                android:layout_width="80dp"
-                                android:layout_height="35dp"
-                                android:src="@drawable/ic_bca" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/drystick_bold"
-                                android:text=""
-                                android:textColor="#000000"
-                                android:textSize="17sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
-                                android:text="9889688863044772"
-                                android:textColor="#454545"
-                                android:textSize="10sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
-                                android:text="PT. Cryptx .Tbk"
-                                android:textColor="#454545"
-                                android:textSize="14sp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layoutDirection="rtl"
-                            android:orientation="vertical">
-
-                            <RadioButton
-                                android:id="@+id/bca"
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:buttonTint="#ff0000"
-                                android:enabled="false"
-                                android:paddingTop="41dp" />
-                        </LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-            <!--tutup letakan fragment-->
-            <!-- letakan fragment disini-->
-            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="9dp"
-                app:cardCornerRadius="6dp">
-
-                <FrameLayout
-                    android:layout_width="4dp"
-                    android:layout_height="match_parent"
-                    android:background="#005EFF" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#BFE4F0FF"
-
-                    android:orientation="vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/drystick_bold"
-                                android:text="BNI"
-                                android:textColor="#505050"
-                                android:textSize="17sp" />
-
-                            <ImageView
-                                android:layout_width="80dp"
-                                android:layout_height="35dp"
-                                android:src="@drawable/ic_bni" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/drystick_bold"
-                                android:text=""
-                                android:textColor="#000000"
-                                android:textSize="17sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
-                                android:text="8899688863044772"
-                                android:textColor="#454545"
-                                android:textSize="10sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
-                                android:text="PT. Cryptx .Tbk"
-                                android:textColor="#454545"
-                                android:textSize="14sp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layoutDirection="rtl"
-                            android:orientation="vertical">
-
-                            <RadioButton
-                                android:id="@+id/bni"
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:buttonTint="#ff0000"
-                                android:enabled="false"
-                                android:paddingTop="41dp" />
-                        </LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-            <!--tutup letakan fragment-->
-            <!-- letakan fragment disini-->
-            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="9dp"
-                app:cardCornerRadius="6dp">
-
-                <FrameLayout
-                    android:layout_width="4dp"
-                    android:layout_height="match_parent"
-                    android:background="#005EFF" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#BFE4F0FF"
-
-                    android:orientation="vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/drystick_bold"
-                                android:text="MANDIRI"
-                                android:textColor="#505050"
-                                android:textSize="17sp" />
-
-                            <ImageView
-                                android:layout_width="80dp"
-                                android:layout_height="35dp"
-                                android:src="@drawable/ic_mandiri" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/drystick_bold"
-                                android:text=""
-                                android:textColor="#000000"
-                                android:textSize="17sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
-                                android:text="7788688863044772"
-                                android:textColor="#454545"
-                                android:textSize="10sp" />
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
-                                android:text="PT. Cryptx .Tbk"
-                                android:textColor="#454545"
-                                android:textSize="14sp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layoutDirection="rtl"
-                            android:orientation="vertical">
-
-                            <RadioButton
-                                android:id="@+id/dbs"
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:buttonTint="#ff0000"
-                                android:enabled="false"
-                                android:paddingTop="41dp" />
-                        </LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-            <!--tutup letakan fragment-->
 
             <TextView
                 android:id="@+id/addbank"
