--- a/app/src/main/res/layout/activity_deposit1.xml
+++ b/app/src/main/res/layout/activity_deposit1.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:theme="@style/ToolbarThemeOverlay"
-        app:title="Deposit Rupiah"
+        app:title="Deposit"
         app:titleMarginStart="0dp"
 
         />
