--- a/app/src/main/res/layout/activity_deposit2.xml
+++ b/app/src/main/res/layout/activity_deposit2.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:theme="@style/ToolbarThemeOverlay"
-                app:title="Deposit Rupiah"
+                app:title="Deposit"
                 app:titleMarginStart="0dp"
                 android:paddingBottom="10dp"/>
 
